--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,7 +3,7 @@
 		<div class="span12">
 			<header>
 				<h2>Thanks <%= @order.name %>!... <br>
-					<small>Your payment was successful. We've sent an email with your tickets and receipt, enjoy the show.</small>
+					<small>Your payment was successful. We need am email address so we can send out you your tickets.</small>
 				</h2>
 			</header>
 			<section id="order-summary" class="section-box">
