--- a/app/views/orders/_payment.html.erb
+++ b/app/views/orders/_payment.html.erb
@@ -1,10 +1,12 @@
-<dl class="dl-horizontal well">
-	<dt>Name on Card: </dt>
-  <dd><%= @order.name %></dd>
-  <dt>Email address: </dt>
-	<dd><%= @order.email %></dd>
-	<dt>Last 4 Digits: </dt>
-	<dd><%= @order.last_four %></dd>
-	<dt>Total Paid</dt>
-	<dd>$11.00</dd>
-</dl>
+<div class="well">
+	<dl class="dl-horizontal">
+		<dt>Name on Card: </dt>
+	  <dd><%= @order.name %></dd>
+	  <dt>Email address: </dt>
+		<dd><%= @order.email %></dd>
+		<dt>Last 4 Digits: </dt>
+		<dd>4935</dd>
+		<dt>Total Paid</dt>
+		<dd><%= number_to_currency(@order.total(@event)) %></dd>
+	</dl>
+</div>
