--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,9 +16,16 @@
 					</p>
 				</header>
 				<% unless user_signed_in? %>
-					<div class="input-append">
-					  <input class="span2" id="appendedInputButton" size="16" type="text" placeholder="Password"><button class="btn" type="button">Save my Account</button>
-					</div>
+						<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+						  <%= f.error_notification %>
+						  <div class="form-inputs">
+						    <%= f.input :email, as: :hidden, input_html: { value: @order.email } %>
+						    <div class="input-append">
+						      <%= f.input :password, required: true, label: false, id: "appendedInputButton", input_html: { class: "span2"} %>
+						  		<%= f.button :submit, "Save my account" %>
+						    </div>
+						  </div>
+						<% end %>
 				<% end %>
 			</div>
 		</div>
