--- a/app/views/promoter/events/index.html.erb
+++ b/app/views/promoter/events/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= link_to event.artist, [:promoter, event], class: "" %></td>
           <td> <%= event.venue %> </td>
           <td> <%= time_tag event.date %> </td>
-          <td> <%= event.line_items.to_a.sum { |item| item.quantity} %> </td>
+          <td> <%= event.orders.to_a.sum { |item| item.quantity} %> </td>
           <td >
             <div class="btn-group pull-right">
               <%= link_to "Show", event_path(event), class: "btn" %>
