--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<%= will_paginate @line_items %>
+<%= will_paginate @orders %>
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
@@ -35,16 +35,16 @@
     </tr>
   </thead>
   <tbody>
-    <% @line_items.each do |item| %>
+    <% @orders.each do |order| %>
     <tr>
-      <% unless item.order.nil? %>
-      <td><%= item.order.name %> </td>
-      <td><%= item.order.email %> </td>
-      <td> <%= item.quantity %></td>
-      <td> <%= number_to_currency(item.line_total_price) %> </td>
+      <%# unless order.nil? %>
+      <td><%= order.name %> </td>
+      <td><%= order.email %> </td>
+      <td> <%= order.quantity %></td>
+      <td> <%#= number_to_currency(line_total_price) %> </td>
       <td> <span class="label label-warning">un-charged</span> </td>
       <% end %>
     </tr>
-    <% end %>
+    <%# end %>
   </tbody>
 </table>
