fixing placeholder issues

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,7 +11,7 @@
 		<div class="row">
 			<div class="label-box">Ticket Info</div>
 				<div class="span3">
-					<% if @event.image.nil? %>
+					<% if @event.image? %>
 						<%= filepicker_image_tag @event.image, w: 300, h: 300, fit: 'crop' %>
 					<% else %>
 						<img src="//quickimage.it/300&text=Artist">
@@ -67,7 +67,7 @@
 				<div class="label-box">Your Promoter</div>
 					<div class="row">
 						<div class="span2">
-								<% if @promoter.avatar.nil? %>
+								<% if @promoter.avatar? %>
 									<%= filepicker_image_tag @promoter.avatar, w: 100, h: 100, fit: 'crop' %>
 								<% else %>
 									<img src="//quickimage.it/100">
@@ -99,7 +99,7 @@
 		<div class="row">
 			<div class="span4">
 				<div id="event-about" contenteditable="true" data-mercury="full">
-					<% if @event.about.nil? %>
+					<% if @event.about? %>
 						<%= raw @event.about  %>
 					<% else %>
 						<%= render 'body_holder' %>
@@ -109,7 +109,7 @@
 			<div class="span6">
 				<h3>
 					Watch....
-					<% if @event.video_html.nil? %>
+					<% if @event.video_html? %>
 						<%= @event.video_html  %>
 					<% else %>
 						<img src="//quickimage.it/630x430&text=Vimeo" class="align_center">
@@ -117,7 +117,7 @@
 				</h3>
 				<h3>
 					Listen....
-					<% if @event.music_html.nil? %>
+					<% if @event.music_html? %>
 						<%= @event.music_html  %>
 					<% else %>
 						<img src="//quickimage.it/565x170&text=Soundcloud+playlist" class="align_left">
