--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -38,7 +38,7 @@
 							<a class="thumbnail" href="#">
 								<img src="http://placehold.it/300x240" alt="">
 							</a>
-							<h3>Promoter Name</h3>
+							<h3><%= user.name %></h3>
 							<p>Featuring a hero unit for a primary message and three supporting elements.</p>
 							<p><%= button_to "View Profile", user_path(user), method: :get, class: "btn button-primary" %></p>
 						</li>
