--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,18 +3,15 @@
 		<div class="row">
 			<div class="label-box">Promoter Info</div>
 			<div id="promoter-pic" class="span2">
-				<img src="//placehold.it/200" class="img-polaroid">
-				<%= link_to "Contact Jimmy", user_path(@user), class: "btn btn-primary btn-block" %>
+				<% if @user.avatar? %>
+					<%= filepicker_image_tag @user.avatar, w: 200, h: 200, fit: 'crop' %>
+				<% else %>
+					<img src="//placehold.it/200" class="img-polaroid">
+				<% end %>
+				<%= link_to "Contact Me!", user_path(@user), class: "btn btn-primary btn-block" %>
 			</div>
 			<div class="span4 offset2">
-				<h3>Jimmy Kay, Vancouver, Canada.</h3>
-					<fieldset class="rating well">
-				    <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="Rocks!">5 stars</label>
-				    <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="Pretty good">4 stars</label>
-				    <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="Meh">3 stars</label>
-				    <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="Kinda bad">2 stars</label>
-				    <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="Sucks big time">1 star</label>
-					</fieldset>
+				<div class="page-header"><h3><%= @user.name %>, Vancouver, Canada.</h3></div>
 			</div>
 		</div>
 	</section>
@@ -62,21 +59,23 @@
 			</div>
 	</section>
 
-	<section id="promoter-info" class="section-box">
+	<section id="tour-info" class="section-box">
 		<div class="row">
-			<div class="span12">
+			<div class="label-box">Tour Info</div>
+			<div class="span6">
 				<div class="tabbable tabs-below">
-				<ul class="nav nav-tabs">
-					<li class="active"><a href="#1" data-toggle="tab">About Me</a></li>
-					<li><a href="#2" data-toggle="tab">My Crowd</a></li>
-					<li><a href="#3" data-toggle="tab">Venue info</a></li>
-					<li><a href="#3" data-toggle="tab">Calendar</a></li>
-					<li><a href="#4" data-toggle="tab">Transport</a></li>
-					<li><a href="#5" data-toggle="tab">Accomodation</a></li>
-				</ul>
+					<ul class="nav nav-tabs">
+						<li class="active"><a href="#1" data-toggle="tab">About Me</a></li>
+						<li><a href="#2" data-toggle="tab">My Crowd</a></li>
+						<li><a href="#3" data-toggle="tab">Venues</a></li>
+						<li><a href="#3" data-toggle="tab">Getting here</a></li>
+						<li><a href="#4" data-toggle="tab">Accomodation</a></li>
+						<li><a href="#5" data-toggle="tab">Calendar & Shows</a></li>
+						<li><a href="#5" data-toggle="tab">Support</a></li>
+					</ul>
+				</div>
 				<div class="tab-content">
 					<div class="tab-pane active" id="1">
-						<img src="//placehold.it/450x320" alt="My Video" class="align_right">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -120,7 +119,7 @@
 							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						</div>
+					</div>
 					<div class="tab-pane" id="4">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -128,7 +127,7 @@
 							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						</div>
+					</div>
 					<div class="tab-pane" id="5">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -138,6 +137,16 @@
 							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 				</div>
+			</div>
+			<div class="span5" id="promoter-media">
+				<div id="placeholder"></div>
+				<div><img src="//quickimage.it/460x340&text=Media"></div>
+
+				<%# if @user.avatar? %>
+					<%#= filepicker_image_tag @user.avatar, w: 200, h: 200, fit: 'crop' %>
+				<%# else %>
+					<!-- <img src="//quickimage.it/200&text=Vimeo" class=""> -->
+				<%# end %>
 			</div>
 		</div>
 	</section>
