looking good, what to put on rhs of lead box

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -18,9 +18,14 @@
 
 //tour info
 
+.tour-content {
+  // min-height: 275px;
+}
+
 #tour-info  img {
   padding-left: 15px;
   padding-right: 15px;
+  margin-bottom: 30px;
 }
 
 #placeholder {
