straightned up promoter event box

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,9 +19,9 @@
 				</div>
 				<div class="span5">
 					<div class="row">
-						<div class="span4 pull-right centered-box">
+						<div class="span3 offset1" align="center">
 							<h2>
-								<small>The promoter presents...</small> <br>
+								<small><%= @promoter.name %> presents...</small> <br>
 								<%= @event.artist %>
 							</h2>
 						</div>
