--- a/app/views/promoter/events/_form.html.erb
+++ b/app/views/promoter/events/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.input :music %>
     <%= f.label :image, "Upload Artist Images" %>
     <%= f.filepicker_field :image, button_class: "btn btn-primary btn-medium"  %>
+    <%= f.simple_fields_for :locations do |location| %>
+        <%= location.input :address %>
+    <% end %>
+
 
     <div class="form-actions">
         <%= f.submit nil, class: "btn btn-primary" %>
