geolocating working on join

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 	<div class="container">
-
+<h1><%= @events_locs %> </h1>
 			<div class="section-box">
 				<div class="navbar">
 					<h2 class="welcome-banner">
