namespaced promoter profile

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
 			<header>
 				<h3>Search Controls</h3>
 			</header>
-			<form>
+			<form class="form">
 				<div>
 					<label>Choose a City</label>
 				  <input results="10" type='search' autofocus="autofocus"/> <br>
