--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             <ul class="nav">
               <li class=""><%= link_to "Home", root_path %></li>
               <li><%= link_to "Events", events_path %></li>
-              <li><%= link_to "Promoters", users_path %></li>
+              <li><%= link_to "Promoters", promoter_profiles_path %></li>
               <li><%= link_to "Help &Info", info_path %></li>
               <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Cart<b class="caret"></b></a>
@@ -73,7 +73,7 @@
                 <% end %>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Account Settings", edit_user_registration_path %></li>
-                  <li><%= link_to "Public Profile", current_user %></li>
+                  <li><%= link_to "User Profile", current_user %></li>
                   <li> <%= link_to "Promoter Admin", promoter_root_path %>  </li>
                   <li class="divider"></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
