changed homepage events index viw a little

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,10 +21,10 @@
 			</div>
 		<div id="content">
 			<section id="latest-events">
-				<header>
+				<header class="well">
 					<h3>
+						<i class="icon-globe"></i>
 						Shows near <%= @current_address %>
-						<small id="geolocation"></small>
 					</h3>
 				</header>
 				<div id="events-carousel" class="carousel slide" data-interval="false">
