--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,11 +43,10 @@
               <li><%= link_to "Promoters", promoter_profiles_path %></li>
               <li><%= link_to "Help &Info", info_path %></li>
             </ul>
-            <form class="navbar-search pull-left" action="">
+            <form class="navbar-search pull-left" action="events/index">
               <%= form_tag events_path, method: :get do %>
                 <%= text_field_tag :query, params[:query], class: "search-query span3" %>
                 <%= submit_tag "Search", name: nil %>
-              <!-- <input type="text" class="search-query span3" placeholder="Search for an Event, City, Artist or Promoter"> -->
               <% end %>
             </form>
             <ul class="nav pull-right">
