--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
               <li><%= link_to "Promoters", promoter_profiles_path %></li>
               <li><%= link_to "Help &Info", info_path %></li>
             </ul>
-            <form class="navbar-search pull-left" action="events/index">
+            <form class="navbar-search pull-left">
               <%= form_tag events_path, method: :get do %>
                 <%= text_field_tag :query, params[:query], class: "search-query span3" %>
                 <%= submit_tag "Search", name: nil %>
