--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,19 +1,20 @@
 <div class="container">
 	<div class="row">
 		<div class="span12">
-			<header class="well">
-				<h3> <i class="icon-globe"></i> <div id="geolocation" class="pull-left"></div></h3>
+			<header>
+				<h3 class="page-header"> Showing <%= request.location.city %><i class="icon-globe"></i> <div class="pull-left"></div></h3>
 			</header>
 		</div>
 	</div>
 	<div class="row">
 		<div class="span3">
 			<aside id="events-searchbar">
+				<div class="well">
 				<header>
 					<h3></h3>
 				</header>
 				<header>
-					<h3>Filter</h3>
+					<h4>Search Controls</h4>
 				</header>
 				<div class="">
 					<ul class="nav nav-list">
@@ -23,18 +24,17 @@
 						<li class="active"><a href="">This Month</a></li>
 						<li class="divider"></li>
 						<li class="nav-header">City</li>
-						<li class="active" id="geolocation">
-							<a href="">Vancouver</a>
-						</li>
 						<% @events.each do |event| %>
-						<li><a href=""><%= event.venue %></a></li>
+						<li><a href=""><%= event.location.address %></a></li>
 						<% end %>
 						<li class="divider"></li>
 						<li class="nav-header">Artist</li>
 						<% @events.each do |event| %>
 						<li><a href=""><%= event.artist %></a></li>
 						<% end %>
+						<li class="divider"></li>
 					</ul>
+				</div>
 				</div>
 			</aside>
 		</div>
@@ -44,13 +44,15 @@
 					<% @events.each do |event| %>
 						<li class="span3">
 							<a class="thumbnail" href="#">
-								<img src="http://placehold.it/240" alt="">
+								<% if event.image? %>
+                  <%= filepicker_image_tag event.image, w: 240, h: 240, fit: 'crop' %>
+                <% else %>
+                  <img src="http://placehold.it/240" alt="">
+                <% end %>
 							</a>
 							<h3><%= event.artist %></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							.</p>
+							<h5><%= event.venue %></h5>
+							<h5><%= time_tag event.date %></h5>
 							<p>
 								<%= button_to "Info and Tickets", event_path(event), method: :get, class: "btn btn-primary" %></a>
 							</p>
