--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,10 +44,7 @@
               <li><%= link_to "Help &Info", info_path %></li>
             </ul>
             <form class="navbar-search pull-left">
-              <%= form_tag events_path, method: :get do %>
-                <%= text_field_tag :query, params[:query], class: "search-query span3" %>
-                <%= submit_tag "Search", name: nil %>
-              <% end %>
+              <%= render 'events/search' %>
             </form>
             <ul class="nav pull-right">
               <% unless user_signed_in? %>
