--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
 			</div>
 		<div id="content">
 			<section id="latest-events">
-				<header class="well">
+				<header class="page-header">
 					<h3>
 						<i class="icon-globe"></i>
 						Shows near <%= @current_address %>
@@ -44,7 +44,7 @@
 													<%= event.artist %>
 												</h4>
 												<p><%= event.venue %> on <%= time_tag event.date %></p>
-												<%= button_to "Info & Tickets", event_path(event), method: :get, class: "btn", id: event.artist %>
+												<%= button_to "Info & Tickets", event_path(event), method: :get, class: "btn btn-success", id: event.artist %>
 											</div>
 										</div>
 									</li>
@@ -63,7 +63,7 @@
 
 			<section id="new-promoters">
 				<header>
-					<h3>Top Promoters</h3>
+					<h3 class="page-header"><i class="icon-globe"></i>Promoters near <%= @current_address %></h3>
 				</header>
 				<div id="promoters-carousel" class="carousel slide" data-interval="false">
 					<div id="promoters" class="carousel-inner">
@@ -72,11 +72,15 @@
 									<% @users.each do |user| %>
 									<li class="span3">
 										<div class="thumbnail">
-											<img src="http://quickimage.it/360x240&text=PromoterPic">
+											<% if user.avatar? %>
+			                  <%= filepicker_image_tag user.avatar, w: 360, h: 360, fit: 'crop' %>
+			                <% else %>
+			                  <img src="http://placehold.it/360x360" alt="">
+			                <% end %>
 											<div class="caption">
 												<h3 class="title"> Promoter Name</h3>
 												<h4>Location</h4>
-												<%= button_to "Full Profile", user_path(user), method: :get %>
+												<%= button_to "Full Profile", user_path(user), method: :get, class: "btn btn-primary" %>
 											</div>
 										</div>
 									</li>
