--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -108,7 +108,7 @@
 						<p>For more details on this and all other technical queries regarding the service click on the 'More Info' button below.</p>
 					</blockquote>
 					<div class="btn-group">
-						<%= link_to "Sign up!", user_omniauth_authorize_path(:stripe_platform), class: "btn btn-large btn-primary" %>
+						<a href="" class="btn btn-large btn-primary">Request Invite</a>
 					  <%= link_to "More Info", info_path, class: "btn btn-large" %>
 					</div>
 				</div>
