--- a/app/views/promoter/events/index.html.erb
+++ b/app/views/promoter/events/index.html.erb
@@ -9,7 +9,7 @@
       <div class="btn-toolbar">
       <button class="btn btn-primary">New Event</button>
       <button class="btn">Profile</button>
-      <button class="btn">Stripe</button>
+      <%= link_to "Sign up!", user_omniauth_authorize_path(:stripe_platform), class: "btn btn-large btn-primary" %>
   </div>
     <table class="table table-striped">
       <thead>
