--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 	  				<div class="label-box">What do you want to do?</div>
 						<ul class="nav">
 							<li class="span2">
-		    				<a href="#new-promoters">Tour my music</a>
+		    				<a href="#new-promoters">Tour or Support</a>
 		  				</li>
 		  				<li class="span3"><a href="#promoter-apply">Organize a show</a></li>
 		  				<li class="span2"><a href="#latest-events">Buy a ticket</a></li>
