correct a few typos

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -80,7 +80,7 @@
 											<div class="caption">
 												<h3 class="title"> Promoter Name</h3>
 												<h4>Location</h4>
-												<%= button_to "Full Profile", user_path(user), method: :get, class: "btn btn-primary" %>
+												<%= button_to "Full Profile", promoter_profile_path(user), method: :get, class: "btn btn-primary" %>
 											</div>
 										</div>
 									</li>
