--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
 				<% end %>
 			</div>
 			<div class="span3 offset2">
-				<p>@user.name</p>
-				<p>@user.email</p>
+				<p><%= @user.name %></p>
+				<p><%= @user.email %></p>
 				<p>Orders</p>
 				<p>Credit Card</p>
 
