--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,7 @@
 			                  <img src="http://placehold.it/360x360" alt="">
 			                <% end %>
 											<div class="caption">
-												<h3 class="title"> Promoter Name</h3>
+												<h3 class="title"><%= user.name %></h3>
 												<h4>Location</h4>
 												<%= button_to "Full Profile", promoter_profile_path(user), method: :get, class: "btn btn-primary" %>
 											</div>
