--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -24,27 +24,31 @@
 </div>
 
 <%= will_paginate @orders %>
-<table class="table table-striped table-bordered">
-  <thead>
-    <tr>
-      <th>Customer Name</th>
-      <th>Email</th>
-      <th>Admits:</th>
-      <th>Total Price</th>
-      <th>Status</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @orders.each do |order| %>
-    <tr>
-      <%# unless order.nil? %>
-      <td><%= order.name %> </td>
-      <td><%= order.email %> </td>
-      <td> <%= order.quantity %></td>
-      <td> <%#= number_to_currency(line_total_price) %> </td>
-      <td> <span class="label label-warning">un-charged</span> </td>
-      <% end %>
-    </tr>
-    <%# end %>
-  </tbody>
-</table>
+
+<%= form_tag  charge_multiple_orders_path,  do %>
+  <%= hidden_field_tag "promoter", current_user %>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Customer Name</th>
+        <th>Email</th>
+        <th>Admits:</th>
+        <th colspan="2" ></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @orders.each do |order| %>
+      <tr>
+        <td><%= check_box_tag "order_ids[]", order.id %> </td>
+        <td><%= order.name %> </td>
+        <td><%= order.email %> </td>
+        <td> <%= order.quantity %></td>
+        <td> <%= link_to "Charge", class: "btn btn-success" %> </td>
+        <td> <span class="label label-warning">un-charged</span> </td>
+        <% end %>
+      </tr>
+    </tbody>
+  </table>
+  <%= submit_tag "Charge" %>
+<% end %>
