--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -25,8 +25,8 @@
 
 <%= will_paginate @orders %>
 
-<%= form_tag  charge_multiple_orders_path,  do %>
-  <%= hidden_field_tag "promoter", current_user %>
+<%= form_tag  charge_multiple_orders_path, method: :post  do %>
+  <%= hidden_field_tag "promoter", current_user.id %>
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -50,5 +50,5 @@
       </tr>
     </tbody>
   </table>
-  <%= submit_tag "Charge" %>
+  <%= submit_tag "Charge Selected" %>
 <% end %>
