--- a/app/views/promoter/events/index.html.erb
+++ b/app/views/promoter/events/index.html.erb
@@ -1,43 +1,53 @@
 <div class="page-header"><h3>Your Events</h3></div>
-<div class="row">
-  <div class="span-12">
-    <br>
+  <div class="row">
+    <div class="span-12">
+      <br>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="span12">
-      <div class="btn-toolbar">
-      <%= link_to "New Event", new_promoter_event_path, class: "btn btn-primary" %>
-      <%= link_to "Profile", promoter_profile_path(current_user), class: "btn btn-primary" %>
-
-      <%= link_to "Connect to Stripe", user_omniauth_authorize_path(:stripe_connect), class: "btn btn-primary" %>
-  </div>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Artist</th>
-          <th>Venue</th>
-          <th>Date</th>
-          <th>Attending</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @events.each do |event| %>
-        <tr>
-          <td><%= link_to event.artist, [:promoter, event], class: "" %></td>
-          <td> <%= event.venue %> </td>
-          <td> <%= time_tag event.date %> </td>
-          <td> <%= event.orders.to_a.sum { |item| item.quantity} %> </td>
-          <td> <%= event.location.nil? %> </td>
-          <td >
-            <div class="btn-group pull-right">
-              <%= link_to raw('<i class="icon-eye-open"></i>'), event_path(event), class: "btn" %>
-              <%= link_to raw('<i class="icon-pencil"></i>'), edit_promoter_event_path(event), class: "btn" %>
-            </div>
-          </td>
-        </tr>
+  <div class="row">
+    <div class="span22">
+        <div class="btn-group">
+        <%= link_to "New Event", new_promoter_event_path, class: "btn btn-primary" %>
+        <%= link_to "Profile", promoter_profile_path(current_user), class: "btn btn-primary" %>
+      </div>
+    </div>
+      <div class="span2">
+        <% if current_user.uid? && current_user.api_key? %>
+          <a class="btn btn-success">Connected to Stripe<i class="icon-ok icon-white"> </i></a>
+        <% else %>
+          <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
         <% end %>
-      </tbody>
-    </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span12">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Artist</th>
+            <th>Venue</th>
+            <th>Date</th>
+            <th>Attending</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @events.each do |event| %>
+          <tr>
+            <td><%= link_to event.artist, [:promoter, event], class: "" %></td>
+            <td> <%= event.venue %> </td>
+            <td> <%= time_tag event.date %> </td>
+            <td> <%= event.orders.to_a.sum { |item| item.quantity} %> </td>
+            <td> <%= event.location.nil? %> </td>
+            <td >
+              <div class="btn-group pull-right">
+                <%= link_to raw('<i class="icon-eye-open"></i>'), event_path(event), class: "btn" %>
+                <%= link_to raw('<i class="icon-pencil"></i>'), edit_promoter_event_path(event), class: "btn" %>
+              </div>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
