--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -50,7 +50,7 @@
 					</div>
 				</div>
 				<div class="span3">
-					<div id="cart-box" class="section-box centered-box">
+					<div id="" class="section-box centered-box">
 						<h1>
 							<%= number_to_currency(@event.ticket_price) %> <br>
 							<small>per ticket</small>
