--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -34,7 +34,8 @@
         <th>Customer Name</th>
         <th>Email</th>
         <th>Admits:</th>
-        <th colspan="2" ></th>
+        <th>Order Total</th>
+        <th colspan="1" >Status</th>
       </tr>
     </thead>
     <tbody>
@@ -44,8 +45,8 @@
         <td><%= order.name %> </td>
         <td><%= order.email %> </td>
         <td> <%= order.quantity %></td>
-        <td> <%= link_to "Charge", class: "btn btn-success" %> </td>
-        <td> <span class="label label-warning">un-charged</span> </td>
+        <td> <%= number_to_currency(order.total(@event)) %></td>
+        <td> <span class="label label-warning"><%= order.stripe_event  %></span> </td>
         <% end %>
       </tr>
     </tbody>
