--- a/app/views/events/_search.html.erb
+++ b/app/views/events/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag events_path, method: :get do %>
+<%= form_tag events_path, method: :get, class: "navbar-search pull-left" do %>
   <%= text_field_tag :query, params[:query], class: "search-query span3", placeholder: "Enter to Search Events" %>
   <%= link_to raw("<i class=\"icon-remove\"></i>"), name: nil, id: :q_reset, method: :get %>
 <% end %>
