--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -34,7 +34,8 @@
     <%= will_paginate @orders %>
 
     <%= form_tag  charge_multiple_orders_path, method: :post  do %>
-    <%= submit_tag "Charge Selected" %>
+    <%= submit_tag "Charge Selected", class: "btn btn-success" %>
+    <%= submit_tag "Refund Selected", name: 'refund', class: "btn btn-warning" %>
       <%= hidden_field_tag "promoter", current_user.id %>
       <table class="table table-striped table-bordered">
         <thead>
