--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -83,7 +83,7 @@
 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat.
 							</p>
-								<%= link_to "Full Profile", user_path(@promoter), class: "btn btn-medium" %>
+								<%= link_to "Full Profile", promoter_profile_path(@promoter), class: "btn btn-medium" %>
 						</div>
 					</div>
 					<div class="row">
